samples/_failures_safe/1761431876_b110b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93d2b634.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_93d2b634.c:129:5: error: expected declaration or statement at end of input
  129 |     for (int i = 0; i < analyzer->word_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_93d2b634.c:129:5: error: expected declaration or statement at end of input
